--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1.0,maximum-scale=1.0" />
+  <meta name="viewport" content="width=device-width">
   <title>ASTRAL RECORDS IO</title>
   
   
