--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width" charset=UTF-8>
+
   <title>ASTRAL RECORDS IO</title>
   
   
