--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width" charset=UTF-8>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
   <title>ASTRAL RECORDS IO</title>
   
