--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h2 class="news" >News</h2>
         <h3 class="event">Upcoming event: Label Night</h3>
         <img class="flyer" src="images/event.jpg">
+        <button class="tickets">BUY TICKETS NOW</button>
     </main>
 
     <aside class="sidebar">
