--- a/artists/artists.html
+++ b/artists/artists.html
@@ -24,16 +24,24 @@
         <h3 class="event">Funkadelic mushroom</h3>
         <p>Funkadelic mushroom is een muzikale jongeman afkomstig uit puerto rico, maar is nu al een tijdje gevestigd in antwerpen. Hij maakt experimentele Goa Trance met een liefde voor science fiction zoals onder andere buitenaards leven en andere dimensies. Dit komt volledig tot zijn recht in zijn muziek en zorgt zo voor een avontuur voor het oor!</p>
 
-        <a>Buy Funkadelic mushroom albums </a>
+        <a href="../shop/shop.html"><button class="koop" >Buy Funkadelic mushroom albums</button></a>
 
         <img class="fm" src="../images/FM.png">
         <h3 class="event">Bonzy</h3>
         <p>Bonzy is een 25 jarige man afkomstig uit Indonesië. Hij woont nu al 10 jaar in België. 
 Hij maakt sinds zijn 18 Goa Trance muziek en laat zich inspireren door de geluiden van de natuur, niet iets dat je dus elke dag hoort!</p>
+
+ <a href="../shop/shop.html"><button class="koop" >Buy Bonzy albums</button></a>
         <h3 class="event">Sunshine Reactor</h3>
         <p>Sunshine reactor bestaat uit twee jonge muzikanten, Tristan Devos(23) en Jan-Alexander Antheunissens(24) beide afkomstig uit Merksem. Hun muziek wordt gekenmerkt door de lichte link met techno om zo hun publiek breder te maken.</p>
+
+        <a href="../shop/shop.html"><button class="koop" >Buy Sunshine Reactor albums</button></a>
+
+
          <h3 class="event">Static Pussy</h3>
          <p>Static Pussy: Static Pussy zijn twee knappe 25-jarige vrouwen uit hartje Antwerpen. Door hun zwaar verleden willen ze met deze muziek iedereen terug in de trance brengen waarin zij verkeerden zonder in aanraking te komen met drugs.</p>
+
+         <a href="../shop/shop.html"><button class="koop" >Buy Static Pussy albums</button></a>
 
     </main>
 
