--- a/artists/artists.html
+++ b/artists/artists.html
@@ -32,6 +32,7 @@
 Hij maakt sinds zijn 18 Goa Trance muziek en laat zich inspireren door de geluiden van de natuur, niet iets dat je dus elke dag hoort!</p>
 
  <a href="../shop/shop.html"><button class="koop" >Buy Bonzy albums</button></a>
+ <img class="fm" src="../images/bonzy.jpg">
         <h3 class="event">Sunshine Reactor</h3>
         <p>Sunshine reactor bestaat uit twee jonge muzikanten, Tristan Devos(23) en Jan-Alexander Antheunissens(24) beide afkomstig uit Merksem. Hun muziek wordt gekenmerkt door de lichte link met techno om zo hun publiek breder te maken.</p>
 
