--- a/artists/artists.html
+++ b/artists/artists.html
@@ -37,12 +37,14 @@ Hij maakt sinds zijn 18 Goa Trance muziek en laat zich inspireren door de geluid
         <p>Sunshine reactor bestaat uit twee jonge muzikanten, Tristan Devos(23) en Jan-Alexander Antheunissens(24) beide afkomstig uit Merksem. Hun muziek wordt gekenmerkt door de lichte link met techno om zo hun publiek breder te maken.</p>
 
         <a href="../shop/shop.html"><button class="koop" >Buy Sunshine Reactor albums</button></a>
+         <img class="fm" src="../images/sun.jpg">
 
 
          <h3 class="event">Static Pussy</h3>
          <p>Static Pussy: Static Pussy zijn twee knappe 25-jarige vrouwen uit hartje Antwerpen. Door hun zwaar verleden willen ze met deze muziek iedereen terug in de trance brengen waarin zij verkeerden zonder in aanraking te komen met drugs.</p>
 
          <a href="../shop/shop.html"><button class="koop" >Buy Static Pussy albums</button></a>
+         <img class="fm" src="../images/pussy.jpg">
 
     </main>
 
